--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "authors": [
     {
       "name": "Conversional GmbH",
-      "email": "support@conversional.de",
+      "email": "support@conversional.de"
     }
   ]
 }
