--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "description": "PHP Implementation of the MapQuest API.",
   "keywords": ["matrixroute","mapquest"],
   "homepage": "https://www.conversion.al",
-  "license": "Apache License 2.0 ",
+  "license": "MIT",
   "authors": [
     {
       "name": "Conversional GmbH",
