--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
   ],
   "require": {
     "guzzlehttp/guzzle": "~6.0"
+  },
+  "autoload": {
+    "psr-0": {
+      "conversional\\mapquest": "src/"
+    }
   }
 }
