--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     "guzzlehttp/guzzle": "~6.0"
   },
   "autoload": {
-    "psr-0": {
-      "Conversional\\MapQuest": "src"
+    "psr-4": {
+      "Conversional\\MapQuest": ["src/"]
     }
   }
 }
