Fix trailing slash

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Conversional\\MapQuest": ["src/"]
+      "Conversional\\MapQuest\\": ["src/"]
     }
   }
 }
